plugins {
	id 'java'
	id "io.github.liplum.mgpp" version "1.2.0"
}


allprojects {
	ext {
		uncVersion = '1.8.9'
		mindustryVersion = 'v146'
		MdtDataDir = 'E:/Users/ASUS/Desktop/Mindustry136'
		buildDir0 = layout.buildDirectory.getAsFile().get()
	}
	tasks.withType(JavaCompile) {
		options.encoding = 'UTF-8'
//		targetCompatibility = 17
//		sourceCompatibility = 17
		targetCompatibility = 9
		sourceCompatibility = 9
		options.compilerArgs.addAll("--add-exports", "java.base/jdk.internal.misc=ALL-UNNAMED")
		options.compilerArgs.addAll("--add-exports", "java.base/jdk.internal.loader=ALL-UNNAMED")
		options.compilerArgs.addAll("--add-exports", "java.base/jdk.internal.reflect=ALL-UNNAMED")
	}
	repositories {
		mavenLocal()
		mavenCentral()
//		maven { url "https://raw.githubusercontent.com/Zelaux/MindustryRepo/master/repository" }
		maven { url 'https://www.jitpack.io' }
	}
}

group 'mod-tools'
version '1.4.4'
sourceSets.main.java.srcDirs = ["src"]


dependencies {
	annotationProcessor "com.github.EB-wilson.UniverseCore:annotations:$uncVersion"
	compileOnly project(":annotations")
	annotationProcessor project(":compiler")

//	def sdkRoot = System.getenv("ANDROID_HOME")
//	println "AndroidHome: $sdkRoot"
//	def platformRoot = new File("$sdkRoot/platforms").listFiles().sort().reverse().find { f -> new File(f, "android.jar").exists() }
	compileOnly files(
			"_libs/Mindustry_android.jar",
			"${MdtDataDir}/Mindustry_desktop.jar",
//			"$platformRoot/android.jar",
			"assets/libs/reflect-core.jar",
			"trash/procyon-0.6.jar",
			"_libs/Android_dalvik-1.0.jar",
	)
	implementation files(
			"_libs/AndroidField.jar",
	)
	compileOnly "com.github.Anuken.Arc:arc-core:$mindustryVersion"
	compileOnly "com.github.Anuken.Mindustry:core:$mindustryVersion"
}


mindustry {
	dependency {}
	client {}
	meta << ModMeta(
			version: version
	)
	meta.displayName = "mod-tools"
	def name = project.archivesBaseName
	deploy {
		baseName = name
	}
	dexJar {
		options.minApi = '31'
	}
}
mindustryAssets {
	// Set the assets root
	rootAt "$projectDir/assets"
}

task playGame(dependsOn: classes, type: JavaExec) {
	dependsOn jar

	doFirst {
		println "buildDir: $buildDir0; version: $version"
		copy {
			from "$buildDir0/libs"
			into "${MdtDataDir}/mods"
			include "$archivesBaseName-${version}.jar"
		}
	}
	//运行游戏目录
	classpath(MdtDataDir + "/Mindustry.jar")
	args = [
//	        '-testMobile'
	]
	jvmArgs = [
			'-DsocksProxyHost=127.0.0.1',
			'-DsocksProxyPort=1080',
			'-DsocksNonProxyHosts="localhost|127.0.0.1"'
	]
}
task ZCompileAll(type: Copy) {
	dependsOn deploy

	from("$buildDir0/tmp/deploy/") {
		include "${rootProject.name}-${version}.jar"
	}
	into("$buildDir0/libs")
	rename { fileName ->
		// a simple way is to remove the "-$version" from the jar filename
		// but you can customize the filename replacement rule as you wish.
		fileName.replace("136-$version", "").replace("-$version", "")
	}
}

task mergeLibs(type: Jar) {
	archiveFileName = "$rootDir/assets/libs/reflect-core.jar"

	def libsDir = new File("$rootDir/libs/build/libs")

	from(zipTree("$libsDir/libs-desktop.jar")) {
		exclude "classes.dex"
//		exclude "mod.hjson"
		exclude "META-INF/META-INF.MF"
	}
	from(zipTree("$libsDir/libs-dx.jar")) {
		include "**"
	}
}

task playAndroid {
	dependsOn deploy

	def adb = "F:/files/java/sdk/platform-tools/adb"
	def MDT_ANDROID_DIR = "/sdcard/Android/data/io.anuke.mindustry/files";
	doLast {
		("$adb push ${buildDir0}/tmp/deploy/${archivesBaseName}-${version}.jar"
				+ " $MDT_ANDROID_DIR/tmp/")
				.execute().waitForProcessOutput(System.out, System.err)

		/*def MindustryLogPath = "${MDT_ANDROID_DIR}/last_log.txt"
		new Fi("${project.rootDir}\\appendLog.sh")
				.writeString("""
#!/bin/sh
# MADE By BING
# 获取文件的初始修改时间
old_time=-1
# 循环检查文件的修改时间
while true; do
  # 获取文件的当前修改时间
  new_time=\$(stat -c %y ${MindustryLogPath})
  # 如果修改时间发生变化
  if [ "\$new_time" != "\$old_time" ]; then
    # 将文件的内容追加到控制台
    tail -f ${MindustryLogPath}
    # 更新修改时间
    old_time=\$new_time
  fi
  # 等待一段时间（秒）
  sleep 0.05
done""")*/
		"$adb push ${project.rootDir}/appendLog.sh ${MDT_ANDROID_DIR}/appendLog.sh"
				.execute().waitForProcessOutput(System.out, System.err)
		"$adb shell am start -n io.anuke.mindustry/mindustry.android.AndroidLauncher -D -W -S"
				.execute().waitForProcessOutput(System.out, System.err)
		"$adb shell sh ${MDT_ANDROID_DIR}/appendLog.sh"
				.execute().waitForProcessOutput(System.out, System.err)
	}
}


